# rkt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTERNAL.md  README.md  release.toml
benchmarks/http/axum/: Cargo.toml
benchmarks/http/axum/src/: main.rs
contrib/db_pools/codegen/: Cargo.toml
contrib/db_pools/codegen/src/: database.rs  lib.rs
contrib/db_pools/codegen/tests/ui-fail-nightly/: database-syntax.stderr  database-types.stderr
contrib/db_pools/codegen/tests/ui-fail-stable/: database-syntax.stderr  database-types.stderr
contrib/dyn_templates/: Cargo.toml  README.md
contrib/dyn_templates/src/: context.rs  fairing.rs  lib.rs  metadata.rs  template.rs
contrib/dyn_templates/src/engine/: handlebars.rs  minijinja.rs  mod.rs  tera.rs
contrib/dyn_templates/tests/: templates.rs
contrib/sync_db_pools/codegen/: Cargo.toml
contrib/sync_db_pools/codegen/src/: database.rs  lib.rs
contrib/sync_db_pools/codegen/tests/ui-fail-nightly/: database-syntax.stderr  database-types.stderr
contrib/ws/: Cargo.toml  README.md
contrib/ws/src/: duplex.rs  lib.rs  websocket.rs
core/codegen/: Cargo.toml
core/codegen/src/: exports.rs  http_codegen.rs  lib.rs  name.rs  syn_ext.rs
core/codegen/src/bang/: mod.rs  uri_parsing.rs
core/codegen/src/derive/: from_form.rs
core/codegen/tests/: async-entry.rs  async-routes.rs  catcher.rs  expansion.rs  from_form.rs  from_form_field.rs  from_param.rs  responder.rs  route-data.rs  route-format.rs  route-ranking.rs  route-raw.rs  route-uniqueness.rs  route.rs  segment-ignore.rs  typed-uris.rs  uri_display.rs
core/codegen/tests/ui-fail/: bad-ignored-segments.rs  catch.rs  catch_type_errors.rs  from_form.rs  from_form_field.rs  from_form_type_errors.rs  responder-types.rs  responder.rs  route-attribute-general-syntax.rs  route-path-bad-syntax.rs  route-type-errors.rs  typed-uri-bad-type.rs  typed-uris-invalid-syntax.rs  uri_display.rs
core/codegen/tests/ui-fail-nightly/: async-entry.stderr  catch.stderr  from_form.stderr  from_form_field.stderr  from_form_type_errors.stderr  from_param.rs  responder-types.stderr  responder.stderr  route-attribute-general-syntax.stderr  route-type-errors.stderr  route-warnings.stderr  typed-uri-bad-type.stderr  typed-uris-bad-params.rs  typed-uris-bad-params.stderr  uri_display.stderr  uri_display_type_errors.stderr
core/codegen/tests/ui-fail-stable/: async-entry.rs  async-entry.stderr  catch.rs  catch.stderr  catchers.rs  from_form.stderr  from_form_type_errors.stderr  responder-types.stderr  responder.stderr  route-type-errors.stderr  route-warnings.rs  routes.rs  typed-uri-bad-type.stderr  uri_display_type_errors.rs  uri_display_type_errors.stderr
core/http/: Cargo.toml
core/http/src/: method.rs  raw_str.rs  status.rs
core/http/src/header/: accept.rs  content_type.rs  header.rs  media_type.rs  proxy_proto.rs
core/http/src/uri/: absolute.rs  asterisk.rs  authority.rs  host.rs  origin.rs  path_query.rs  reference.rs  segments.rs  uri.rs
core/lib/: Cargo.toml
core/lib/fuzz/: Cargo.toml
core/lib/fuzz/targets/: collision-matching.rs  uri-normalization.rs  uri-parsing.rs  uri-roundtrip.rs
core/lib/src/: error.rs  lib.rs  lifecycle.rs  outcome.rs  phase.rs  rocket.rs  sentinel.rs  server.rs  state.rs
core/lib/src/catcher/: catcher.rs  handler.rs
core/lib/src/config/: config.rs  ident.rs  mod.rs  secret_key.rs
core/lib/src/data/: capped.rs  data.rs  data_stream.rs  from_data.rs  io_stream.rs  limits.rs
core/lib/src/fairing/: ad_hoc.rs  info_kind.rs  mod.rs
core/lib/src/form/: context.rs  error.rs  field.rs  form.rs  from_form.rs  from_form_field.rs  lenient.rs  mod.rs  strict.rs  validate.rs
core/lib/src/fs/: file_name.rs  mod.rs  named_file.rs  rewrite.rs  server.rs  temp_file.rs
core/lib/src/http/: cookies.rs  mod.rs
core/lib/src/listener/: quic.rs  tcp.rs
core/lib/src/local/: client.rs  mod.rs  request.rs  response.rs
core/lib/src/mtls/: certificate.rs  config.rs  error.rs  mod.rs  name.rs
core/lib/src/request/: from_param.rs  from_request.rs  mod.rs  request.rs  tests.rs
core/lib/src/response/: body.rs  content.rs  debug.rs  flash.rs  mod.rs  redirect.rs  responder.rs  response.rs  status.rs
core/lib/src/route/: handler.rs  route.rs  uri.rs
core/lib/src/router/: collider.rs  matcher.rs  mod.rs
core/lib/src/serde/: json.rs  mod.rs  msgpack.rs  uuid.rs
core/lib/src/shield/: mod.rs  policy.rs  shield.rs
core/lib/src/shutdown/: config.rs  handle.rs
core/lib/src/tls/: config.rs  resolver.rs
core/lib/src/trace/: macros.rs  mod.rs  traceable.rs
core/lib/tests/: absolute-uris-okay-issue-443.rs  adhoc-uri-normalizer.rs  byte-slices-form-field-issue-2148.rs  can-correct-bad-local-uri.rs  can-launch-tls.rs  catcher-cookies-1213.rs  conditionally-set-server-header-996.rs  config-proxy-proto-header.rs  config-real-ip-header.rs  config-secret-key-1500.rs  content-length.rs  cookies-private.rs  derive-reexports.rs  deserialize-limits-issue-2268.rs  encoded-uris.rs  fairing_before_head_strip-issue-546.rs  file_server.rs  flash-lazy-removes-issue-466.rs  form-validation-names.rs  form_method-issue-45.rs  form_value_decoding-issue-82.rs  form_value_from_encoded_str-issue-1425.rs  forward-includes-status-1560.rs  head_handling.rs  http_serde.rs  launch-inspect.rs  limits.rs  local-client-access-runtime-in-drop.rs  local-client-json.rs  local-request-content-type-issue-505.rs  local_request_private_cookie-issue-368.rs  many-cookie-jars-at-once.rs  mapped-base-issue-1262.rs  mount_point.rs  msgpack_encoding.rs  multipart-limit.rs  nested-fairing-attaches.rs  on_launch_fairing_can_inspect_port.rs  panic-handling.rs  precise-content-type-matching.rs  (+20 more)
docs/tests/: Cargo.toml
docs/tests/src/: guide.rs  lib.rs  readme.rs
examples/databases/: Cargo.toml  Rocket.toml
examples/databases/src/: diesel_mysql.rs  diesel_sqlite.rs  main.rs  rusqlite.rs  sqlx.rs  tests.rs
examples/templating/: Cargo.toml
examples/templating/src/: hbs.rs  main.rs  minijinja.rs  tera.rs  tests.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs  task.rs  tests.rs
(+195 files in other folders)
