[workspace]
resolver = "2"
members = [
  "core/lib/",
  "core/codegen/",
  "core/http/",
  "contrib/dyn_templates/",
  "contrib/ws/",
  "docs/tests",
]

[workspace.package]
version = "1.0.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.88.0"
homepage = "https://rkt.rs"
repository = "https://github.com/rustfoo/rkt"
readme = "README.md"

[workspace.dependencies]
rkt                     = { version = "1.0.1", path = "core/lib/", default-features = false }
rkt_http                = { version = "1.0.1", path = "core/http/" }
rkt_codegen             = { version = "1.0.1", path = "core/codegen/" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
async_fn_in_trait = "allow"
#refining_impl_trait = "allow"
# unreachable_pub = "warn"
# single_use_lifetimes = "warn"
# missing_docs = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
module_inception = "allow"
multiple_bound_locations = "allow"
manual_range_contains = "allow"
result_large_err = "allow"
needless_borrow = "allow"
