[package]
name = "rkt_dyn_templates"
version = "0.3.2"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Dynamic templating engine integration for rkt."
#documentation = "https://docs.rs/rustfoo/"
homepage = "https://rkt.rs"
repository = "https://github.com/rustfoo/rkt/tree/main/contrib/dyn_templates"
readme = "README.md"
keywords = ["rkt", "rocket", "framework", "templates", "templating", "engine"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"

[lints]
workspace = true

[features]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
minijinja = ["dep:minijinja"]

[dependencies]
walkdir = "2.4"
notify = "8"
normpath = "1"

tera = { version = "=1.20.1", optional = true }

handlebars = { version = "6.0", optional = true }

[dependencies.minijinja]
version = "2.0.1"
optional = true
features = ["loader", "speedups", "json", "urlencode"]

[dependencies.rkt]
version = "0.6.0"
path = "../../core/lib"
default-features = false

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
