[package]
name = "rkt_dyn_templates"
version.workspace = true
authors.workspace = true
description = "Dynamic templating engine integration for rkt."
documentation = "https://docs.rs/rkt_dyn_templates/latest/rkt_dyn_templates"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["rkt", "framework", "templates", "templating", "engine"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
minijinja = ["dep:minijinja"]

[dependencies]
walkdir = "2.4"
notify = "8"
normpath = "1"

tera = { version = "=1.20.1", optional = true }

handlebars = { version = "6.0", optional = true }

[dependencies.minijinja]
version = "2.0.1"
optional = true
features = ["loader", "speedups", "json", "urlencode"]

[dependencies.rkt]
workspace = true
default-features = false

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
