[package]
name = "rkt_ws"
version = "0.1.4"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "WebSocket support for rkt."
#documentation = "https://api.rocket.rs/master/rocket_ws/"
#homepage = "https://rocket.rs"
#repository = "https://github.com/rwf2/Rocket/tree/master/contrib/ws"
readme = "README.md"
keywords = ["rkt", "rocket", "web", "framework", "websocket"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"

[lints]
workspace = true

[features]
default = ["tungstenite"]
tungstenite = ["tokio-tungstenite"]

[dependencies]
tokio-tungstenite = { version = "0.24", optional = true }

[dependencies.rkt]
version = "0.6.0"
path = "../../core/lib"
default-features = false

[package.metadata.docs.rs]
all-features = true
