[package]
name = "rkt_ws"
version.workspace = true
authors.workspace = true
description = "WebSocket support for rkt."
#documentation = "https://api.rocket.rs/master/rocket_ws/"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["rkt", "rocket", "web", "framework", "websocket"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["tungstenite"]
tungstenite = ["tokio-tungstenite"]

[dependencies]
tokio-tungstenite = { version = "0.24", optional = true }

[dependencies.rkt]
workspace = true
default-features = false

[package.metadata.docs.rs]
all-features = true
