[package]
name = "rkt_ws"
version.workspace = true
authors.workspace = true
description = "WebSocket support for rkt."
documentation = "https://docs.rs/rkt_ws/latest/rkt_ws/"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["rkt", "rocket", "web", "framework", "websocket"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["tungstenite"]
tungstenite = ["tokio-tungstenite"]

[dependencies]
tokio-tungstenite = { version = "0.29", optional = true }

[dependencies.rkt]
workspace = true
default-features = false

[package.metadata.docs.rs]
all-features = true
