[package]
name = "rkt_codegen"
version.workspace = true
authors.workspace = true
description = "Procedural macros for the rkt web framework."
documentation = "https://docs.rs/rkt_codegen/latest/rkt_codegen/"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["rkt", "web", "framework", "code", "generation"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
indexmap = "2"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0.60"
devise = "0.4"
rkt_http = { workspace = true }
unicode-xid = "0.2"
version_check = "0.9"
glob = "0.3"

[dev-dependencies]
rkt = { path = "../lib", features = ["json", "msgpack"] }
time = { version =  "0.3", features = ["macros"] }
pretty_assertions = "1"
version_check = "0.9"
trybuild = "1.0"
