[package]
name = "rkt_http"
version.workspace = true
authors.workspace = true
description = """
Types, traits, and parsers for HTTP requests, responses, and headers.
"""
documentation = "https://docs.rs/rkt_http/latest/rkt_http/"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["rkt", "rocket", "web", "framework", "http"]
license.workspace = true
categories = ["web-programming"]
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "uncased/with-serde-alloc"]
uuid = ["dep:uuid"]

[dependencies]
tinyvec = { version = "1.11", features = ["std", "rustc_1_57"] }
percent-encoding = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
indexmap = "2"
ref-cast = "1.0"
uncased = "0.9.10"
either = "1"
pear = "0.2.9"
memchr = "2"
stable-pattern = "0.1"
cookie = { version = "0.18", features = ["percent-encode"] }
state = "0.6"

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["std"]

[dependencies.uuid]
version = "1"
optional = true
default-features = false

[dev-dependencies]
rkt = { path = "../lib", features = ["mtls"] }
