[package]
name = "rkt_docs_tests"
version = "0.6.0"
workspace = "../../"
edition = "2021"
publish = false

[lints.rust]
missing_docs = "allow"
missing_abi = "allow"

[dependencies]
rkt = { path = "../../core/lib", features = ["secrets"] }

[dev-dependencies]
rkt = { path = "../../core/lib", features = ["secrets", "json", "mtls"] }
figment = { version = "0.10.17", features = ["toml", "env"] }
tokio = { version = "1", features = ["macros", "io-std"] }
rand = "0.9"

[dev-dependencies.rkt_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]

[dev-dependencies.rkt_db_pools]
path = "../../contrib/db_pools/lib"
features = ["sqlx_sqlite"]

[dev-dependencies.rkt_ws]
path = "../../contrib/ws"