[package]
name = "databases"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rkt = { path = "../../core/lib", features = ["json"] }
diesel = { version = "2", features = ["returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rkt_db_pools]
path = "../../contrib/db_pools/lib/"
features = ["sqlx_sqlite", "diesel_mysql"]

[dependencies.rkt_sync_db_pools]
path = "../../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool", "sqlite_pool"]
