[package]
name = "databases"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rkt = { path = "../../core/lib", features = ["json"] }
diesel = { version = "2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["sqlite", "macros", "migrate", "runtime-tokio"]
