[package]
name = "templating"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rkt = { path = "../../core/lib" }

# in your application, you should enable only the template engine(s) used
[dependencies.rkt_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera", "handlebars", "minijinja"]
