[package]
name = "todo"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rkt = { path = "../../core/lib" }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.9"

[dependencies.rkt_sync_db_pools]
path = "../../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool"]

[dependencies.rkt_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]
