[package]
name = "todo"
version = "0.0.0"
workspace = "../"
edition = "2021"
publish = false

[dependencies]
rkt = { path = "../../core/lib" }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["sqlite", "macros", "migrate", "runtime-tokio"]

[dependencies.rkt_dyn_templates]
path = "../../contrib/dyn_templates"
features = ["tera"]

[dev-dependencies]
rand = "0.9"
