[package]
name = "axum-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "axum-bench"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
