[package]
name = "rkt_db_pools_codegen"
version = "0.3.2"
authors = ["Sergio Benitez <sb@sergio.bz>", "Jeb Rosen <jeb@jebrosen.com>"]
description = "Procedural macros for rkt_db_pools."
repository = "https://github.com/rustfoo/rkt/tree/main/contrib/db_pools"
readme = "../README.md"
keywords = ["rkt", "rocket", "framework", "database", "pools"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
devise = "0.4"
quote = "1"

[dev-dependencies]
rkt = { path = "../../../core/lib", default-features = false }
rkt_db_pools = { path = "../lib", features = ["deadpool_postgres"] }
trybuild = "1.0"
version_check = "0.9"
