[package]
name = "rkt_sync_db_pools_codegen"
version = "0.3.2"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for rocket_sync_db_pools."
#repository = "https://github.com/rwf2/Rocket/tree/master/contrib/sync_db_pools"
readme = "../README.md"
keywords = ["rkt", "rocket", "framework", "database", "pools"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.82"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0"
devise = "0.4"

[dev-dependencies]
version_check = "0.9"
trybuild = "1.0"
rkt_sync_db_pools = { path = "../lib" }
rkt = { path = "../../../core/lib" }
